--- a/projects/ngx-ui-doc/src/app/app.component.html
+++ b/projects/ngx-ui-doc/src/app/app.component.html
@@ -1,1 +1,17 @@
-<button ngx-ui-button>Salut</button>
+<h1>Buttons</h1>
+
+<div class="mb-1">
+  <button ngx-ui-button>Primary</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="success">Success</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="information">Information</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="warning">Warning</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="error">Error</button>
+</div>
