ngx-ui-button size

--- a/projects/ngx-ui-doc/src/app/app.component.html
+++ b/projects/ngx-ui-doc/src/app/app.component.html
@@ -1,17 +1,17 @@
 <h1>Buttons</h1>
 
 <div class="mb-1">
-  <button ngx-ui-button>Primary</button>
+  <button ngx-ui-button size="xs">Primary</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="success">Success</button>
+  <button ngx-ui-button color="success" size="s">Success</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="information">Information</button>
+  <button ngx-ui-button color="information" size="m">Information</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="warning">Warning</button>
+  <button ngx-ui-button color="warning" size="l">Warning</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="error">Error</button>
+  <button ngx-ui-button color="error" size="xl">Error</button>
 </div>
