--- a/projects/ngx-ui-doc/src/app/app.component.html
+++ b/projects/ngx-ui-doc/src/app/app.component.html
@@ -1,17 +1,60 @@
+<h1>Icons</h1>
+
+<ngx-ui-icon icon="plus"></ngx-ui-icon>
+<ngx-ui-icon icon="spinner" animation="spin"></ngx-ui-icon>
+<ngx-ui-icon icon="bell" color="error"></ngx-ui-icon>
+
 <h1>Buttons</h1>
 
 <div class="mb-1">
-  <button ngx-ui-button size="xs">Primary</button>
+  <button ngx-ui-button size="m">Primary</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="success" size="s">Success</button>
+  <button ngx-ui-button size="m" disabled>Primary disabled</button>
 </div>
+
+<div class="mb-1">
+  <button ngx-ui-button color="secondary" size="m">Secondary</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="secondary" size="m" disabled>Secondary disabled</button>
+</div>
+
+<div class="mb-1">
+  <button ngx-ui-button color="success" size="m">Success</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="success" size="m" disabled>Success disabled</button>
+</div>
+
 <div class="mb-1">
   <button ngx-ui-button color="information" size="m">Information</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="warning" size="l">Warning</button>
+  <button ngx-ui-button color="information" size="m" disabled>Information disabled</button>
+</div>
+
+<div class="mb-1">
+  <button ngx-ui-button color="warning" size="m">Warning</button>
 </div>
 <div class="mb-1">
-  <button ngx-ui-button color="error" size="xl">Error</button>
+  <button ngx-ui-button color="warning" size="m" disabled>Warning disabled</button>
+</div>
+
+<div class="mb-1">
+  <button ngx-ui-button color="error" icon="bell" size="m">Error</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="error" icon="bell" size="m" disabled>Error disabled</button>
+</div>
+
+<div class="mb-1">
+  <button ngx-ui-button color="error" icon="bell">Error</button>
+</div>
+<div class="mb-1">
+  <button ngx-ui-button color="error" icon="bell" brush="r">Error</button>
+</div>
+
+<div class="mb-1">
+  <button ngx-ui-button color="error" icon="bell" brush="r"></button>
 </div>
