--- a/projects/ngx-ui/src/lib/components/button/button.component.html
+++ b/projects/ngx-ui/src/lib/components/button/button.component.html
@@ -1,1 +1,5 @@
+<ngx-ui-icon [class]="'ngx-ui-button-icon-' + iconPosition"
+             [icon]="icon"
+             [brush]="brush"
+             *ngIf="icon !== null"></ngx-ui-icon>
 <ng-content></ng-content>
