--- a/projects/ngx-ui/src/themes/default.scss
+++ b/projects/ngx-ui/src/themes/default.scss
@@ -7,7 +7,7 @@
   --ngx-ui-primary-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --ngx-ui-secondary-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   /* Primary */
-  --ngx-ui-primary-ultra-light: #E0FCFF;
+  --ngx-ui-primary-ultra-light: #FFF;
   --ngx-ui-primary-super-light: #BEF8FD;
   --ngx-ui-primary-lighter: #87EAF2;
   --ngx-ui-primary-light: #54D1DB;
@@ -27,7 +27,7 @@
   --ngx-ui-neutral-super-dark: #334E68;
   --ngx-ui-neutral-ultra-dark: #243B53;
   /* Accent warning */
-  --ngx-ui-warning-ultra-light: #FFFBEA;
+  --ngx-ui-warning-ultra-light: #FFF;
   --ngx-ui-warning-super-light: #FFF3C4;
   --ngx-ui-warning-lighter: #FCE588;
   --ngx-ui-warning-light: #FADB5F;
@@ -37,7 +37,7 @@
   --ngx-ui-warning-super-dark: #CB6E17;
   --ngx-ui-warning-ultra-dark: #B44D12;
   /* Accent error */
-  --ngx-ui-error-ultra-light: #FFBDBD;
+  --ngx-ui-error-ultra-light: #FFF;
   --ngx-ui-error-super-light: #FF9B9B;
   --ngx-ui-error-lighter: #F86A6A;
   --ngx-ui-error-light: #EF4E4E;
@@ -47,7 +47,7 @@
   --ngx-ui-error-super-dark: #8A041A;
   --ngx-ui-error-ultra-dark: #610316;
   /* Accent success */
-  --ngx-ui-success-ultra-light: #EFFCF6;
+  --ngx-ui-success-ultra-light: #FFF;
   --ngx-ui-success-super-light: #C6F7E2;
   --ngx-ui-success-lighter: #8EEDC7;
   --ngx-ui-success-light: #65D6AD;
@@ -57,7 +57,7 @@
   --ngx-ui-success-super-dark: #147D64;
   --ngx-ui-success-ultra-dark: #0C6B58;
   /* Accent info */
-  --ngx-ui-information-ultra-light: #DCEEFB;
+  --ngx-ui-information-ultra-light: #FFF;
   --ngx-ui-information-super-light: #B6E0FE;
   --ngx-ui-information-lighter: #84C5F4;
   --ngx-ui-information-light: #62B0E8;
