--- a/projects/ngx-ui/src/lib/components/button/button.component.scss
+++ b/projects/ngx-ui/src/lib/components/button/button.component.scss
@@ -9,9 +9,23 @@
   font-family: var(--ngx-ui-primary-family);
   cursor: pointer;
   border-radius: var(--ngx-ui-radius);
-  font-size: .9rem;
+  font-size: .85rem;
+  text-transform: uppercase;
   font-weight: 500;
   box-shadow: 0 3px 1px -2px var(--ngx-ui-neutral-light);
+  gap: .75rem;
+
+  .ngx-ui-button-icon-left {
+    order: 0;
+  }
+
+  .ngx-ui-button-icon-right {
+    order: 1;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+  }
 
   &:focus {
     outline: none;
@@ -50,12 +64,42 @@
     color: var(--ngx-ui-primary-ultra-light);
     border-color: var(--ngx-ui-primary-ultra-dark);
 
-    &:focus {
-      background-color: var(--ngx-ui-primary-dark);
+    &:not([disabled]) {
+      &:focus,
+      &:hover {
+        background-color: var(--ngx-ui-primary-dark);
+      }
+
+      &:active {
+        background-color: var(--ngx-ui-primary-darker);
+      }
     }
 
-    &:active {
-      background-color: var(--ngx-ui-primary-darker);
+    &:disabled {
+      background-color: var(--ngx-ui-primary-light);
+      color: var(--ngx-ui-primary-super-light);
+    }
+  }
+
+  &.ngx-ui-button-secondary {
+    background-color: transparent;
+    color: var(--ngx-ui-primary-ultra-dark);
+    border-color: var(--ngx-ui-primary-ultra-dark);
+
+    &:not([disabled]) {
+      &:focus,
+      &:hover {
+        text-decoration: underline dotted;
+      }
+
+      &:active {
+        text-decoration-style: dashed;
+      }
+    }
+
+    &:disabled {
+      border-color: var(--ngx-ui-primary-dark);
+      color: var(--ngx-ui-primary-light);
     }
   }
 
@@ -64,12 +108,20 @@
     color: var(--ngx-ui-success-ultra-light);
     border-color: var(--ngx-ui-success-ultra-dark);
 
-    &:focus {
-      background-color: var(--ngx-ui-success-dark);
+    &:not([disabled]) {
+      &:focus,
+      &:hover {
+        background-color: var(--ngx-ui-success-dark);
+      }
+
+      &:active {
+        background-color: var(--ngx-ui-success-darker);
+      }
     }
 
-    &:active {
-      background-color: var(--ngx-ui-success-darker);
+    &:disabled {
+      background-color: var(--ngx-ui-success-light);
+      color: var(--ngx-ui-success-super-light);
     }
   }
 
@@ -78,12 +130,20 @@
     color: var(--ngx-ui-information-ultra-light);
     border-color: var(--ngx-ui-information-ultra-dark);
 
-    &:focus {
-      background-color: var(--ngx-ui-information-dark);
+    &:not([disabled]) {
+      &:focus,
+      &:hover {
+        background-color: var(--ngx-ui-information-dark);
+      }
+
+      &:active {
+        background-color: var(--ngx-ui-information-darker);
+      }
     }
 
-    &:active {
-      background-color: var(--ngx-ui-information-darker);
+    &:disabled {
+      background-color: var(--ngx-ui-information-light);
+      color: var(--ngx-ui-information-super-light);
     }
   }
 
@@ -92,12 +152,20 @@
     color: var(--ngx-ui-warning-ultra-light);
     border-color: var(--ngx-ui-warning-ultra-dark);
 
-    &:focus {
-      background-color: var(--ngx-ui-warning-dark);
+    &:not([disabled]) {
+      &:focus,
+      &:hover {
+        background-color: var(--ngx-ui-warning-dark);
+      }
+
+      &:active {
+        background-color: var(--ngx-ui-warning-darker);
+      }
     }
 
-    &:active {
-      background-color: var(--ngx-ui-warning-darker);
+    &:disabled {
+      background-color: var(--ngx-ui-warning-light);
+      color: var(--ngx-ui-warning-super-light);
     }
   }
 
@@ -106,12 +174,20 @@
     color: var(--ngx-ui-error-ultra-light);
     border-color: var(--ngx-ui-error-ultra-dark);
 
-    &:focus {
-      background-color: var(--ngx-ui-error-dark);
+    &:not([disabled]) {
+      &:focus,
+      &:hover {
+        background-color: var(--ngx-ui-error-dark);
+      }
+
+      &:active {
+        background-color: var(--ngx-ui-error-darker);
+      }
     }
 
-    &:active {
-      background-color: var(--ngx-ui-error-darker);
+    &:disabled {
+      background-color: var(--ngx-ui-error-light);
+      color: var(--ngx-ui-error-super-light);
     }
   }
 }
