--- a/projects/ngx-ui-doc/src/app/app.component.html
+++ b/projects/ngx-ui-doc/src/app/app.component.html
@@ -1,8 +1,12 @@
 <h1>Icons</h1>
 
-<ngx-ui-icon icon="plus"></ngx-ui-icon>
-<ngx-ui-icon icon="spinner" animation="spin"></ngx-ui-icon>
-<ngx-ui-icon icon="bell" color="error"></ngx-ui-icon>
+<div class="flex-column gap-1">
+  <ngx-ui-icon icon="bell"></ngx-ui-icon>
+  <ngx-ui-icon icon="bell" brush="r"></ngx-ui-icon>
+  <ngx-ui-icon icon="bell" brush="r" [fw]="false"></ngx-ui-icon>
+  <ngx-ui-icon icon="spinner" animation="spin"></ngx-ui-icon>
+  <ngx-ui-icon icon="bell" color="error"></ngx-ui-icon>
+</div>
 
 <h1>Buttons</h1>
 
