--- a/projects/ngx-ui/src/themes/base.scss
+++ b/projects/ngx-ui/src/themes/base.scss
@@ -60,6 +60,10 @@
   border-color: var(--ngx-ui-error-darker);
 }
 
+.ngx-ui-hidden {
+  display: none;
+}
+
 /********************************************************** FLEX **********************************************************/
 
 .flex-row {
@@ -341,13 +345,16 @@
 /********************************************************************************** GAP **********************************************************************************/
 
 .gap-1 {
+  grid-gap: 1rem;
   gap: 1rem;
 }
 
 .gap-2 {
+  grid-gap: 2rem;
   gap: 2rem;
 }
 
 .gap-3 {
+  grid-gap: 3rem;
   gap: 3rem;
 }
