--- a/projects/ngx-ui-doc/src/app/app.component.html
+++ b/projects/ngx-ui-doc/src/app/app.component.html
@@ -4,7 +4,7 @@
   <ngx-ui-accordion color="primary">
     <ngx-ui-accordion-item icon="bell">
       <ng-container *ngx-ui-accordion-item-title>I'm the title I</ng-container>
-      <ng-container *ngx-ui-accordion-item-content>I'm the content I</ng-container>
+      <ng-container *ngx-ui-accordion-item-content>I'm the content I<input type="text" /></ng-container>
     </ngx-ui-accordion-item>
     <ngx-ui-accordion-item icon="exclamation-circle">
       <ng-container *ngx-ui-accordion-item-title>I'm the title III</ng-container>
